minio js fixes --> change this

--- a/run/core/minio-js/package.json
+++ b/run/core/minio-js/package.json
@@ -1,48 +1,20 @@
 {
-  "name": "bin",
+  "name": "minio-js",
   "version": "1.0.0",
-  "main": "functional_test.js",
+  "description": "minio-js functional test",
+  "main": "index.js",
+  "directories": {
+    "test": "test"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
   "author": "",
-  "license": "ISC",
-  "description": "",
+  "license": "Apache-2.0",
   "dependencies": {
-    "app-module-path": "*",
-      "async": "*",
-    "block-stream2": "*",
-    "concat-stream": "*",
-    "es6-error": "*",
-    "json-stream": "*",
-    "lodash": "*",
-    "mime-types": "*",
-    "mkdirp": "*",
-    "moment": "*",
-    "source-map-support": "*",
-    "through2": "*",
-    "xml": "*",
-    "xml2js": "*"
-  },
-  "devDependencies": {
-    "browserify": "*",
-    "chai": "*",
-    "gulp": "*",
-    "gulp-babel": "*",
-    "gulp-jscs": "*",
-    "jshint":"2.*",
-    "gulp-jshint": "*",
-    "gulp-mocha": "*",
-    "gulp-notify": "*",
-    "gulp-sourcemaps": "*",
-    "jshint-stylish": "*",
-    "mocha": "*",
-    "nock": "*",
-    "rewire": "*",
-    "superagent": "*"
-  },
-  "scripts": {
-    "test": "mocha"
+    "babel-cli": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "minio": "^3.1.3",
+    "superagent": "^3.5.2"
   }
 }
